phone nav, phone overflow glitch fixed

--- a/src/componenets/layout/Navbar/Navbar.css
+++ b/src/componenets/layout/Navbar/Navbar.css
@@ -1,3 +1,7 @@
 .navbar-button-origin {
     transform-origin: top right;
 }
+
+.navbar-button-transition {
+    transition-property: border-radius;
+}
